# SPLFLIX

./: CMakeLists.txt  makefile
include/: Action.h  Session.h  User.h  Watchable.h
src/: BaseAction.cpp  ChangeActiveUser.cpp  CreateUser.cpp  DeleteUser.cpp  DuplicateUser.cpp  Episode.cpp  Exit.cpp  GenreRecommenderUser.cpp  LengthRecommenderUser.cpp  Main.cpp  Movie.cpp  PrintActionsLog.cpp  PrintContentList.cpp  PrintWatchHistory.cpp  RerunRecommenderUser.cpp  Session.cpp  User.cpp  Watch.cpp  Watchable.cpp  main.cpp
